# ledger-blooo-lib

./: CMakeLists.txt  README.md  dockerized_build.mk
.github/workflows/: main.yml
app/common/: view_s.c  view_x.c
include/: zxversion.h
templates/: Makefile.root
